--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <title>skyflux | Cloud Hosting For Everyone</title>
 </head>
 <body>
+    <!-- Navbar -->
+    <div class="navbar">
+        <div class="container">
+            <h1 class="logo">skyflux.</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Features</a></li>
+                    <li><a href="docs.html">Docs</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
     
 </body>
 </html>
