--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Navbar -->
     <div class="navbar">
-        <div class="container">
+        <div class="container flex">
             <h1 class="logo">skyflux.</h1>
             <nav>
                 <ul>
@@ -22,6 +22,17 @@
             </nav>
         </div>
     </div>
+
+    <!-- Showcase -->
+        <section class="showcase">
+            <div class="container grid">
+                <div class="showcase-text">
+                    <h1>Easier Deployment</h1>
+                    <p>Deploy web apps of all kinds, from large scale enterprise APIs to static websites for individuals. Fill out the form to try a demo of our platform</p>
+                    <a href="features.html" class="btn btn-outline">Read More</a>
+                </div>
+            </div>
+        </section>
     
 </body>
 </html>
