--- a/features.html
+++ b/features.html
@@ -9,20 +9,87 @@
     <title>skyflux | Cloud Hosting For Everyone</title>
 </head>
 <body>
-    <!-- Navbar -->
-    <div class="navbar">
-        <div class="container flex">
-            <h1 class="logo">skyflux.</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Features</a></li>
-                    <li><a href="docs.html">Docs</a></li>
-                </ul>
-            </nav>
+
+<!-- Navbar -->
+<div class="navbar">
+    <div class="container flex">
+        <h1 class="logo">skyflux.</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="features.html">Features</a></li>
+                <li><a href="docs.html">Docs</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
+
+<!-- Head -->
+<section class="features-head bg-primary py-3">
+    <div class="container grid">
+        <div>
+            <h1 class="xl">Features</h1>
+            <p class="lead">Check out the features of skyflux that separate us from the competition</p>
+        </div>
+        <img src="images/server.png" alt="">
+    </div>
+</section>
+
+<!-- Sub head -->
+<section class="features-sub-head bg-light py-3 shadow2">
+    <div class="container grid">
+        <div>
+            <h1 class="md">The skyflux platform</h1>
+            <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam odio aut corrupti? Aliquid, vero tenetur. Quasi similique iste illum, voluptates omnis quisquam perspiciatis, repellat maxime asperiores earum ad. Inventore, reprehenderit!</p>
+        </div>
+        <img src="images/server2.png" alt="">
+    </div>
+</section>
+
+<!-- Features Main -->
+<section class="features-main my-2">
+    <div class="container grid grid-3">
+        <div class="card flex">
+            <i class="fas fa-server fa-3x"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo saepe corrupti et dolorem voluptate at, nostrum rem voluptatem ab alias quia molestiae ea, libero nihil deserunt. Molestias, eum? Necessitatibus!</p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-network-wired fa-3x"></i>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+                recusandae perferendis culpa, reiciendis a itaque debitis qui vel
+                dignissimos ipsum!
+            </p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-laptop-code fa-3x"></i>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                magnam.
+            </p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-database fa-3x"></i>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, a!
+            </p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-power-off fa-3x"></i>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                magnam.
+            </p>
+        </div>
+        <div class="card flex">
+            <i class="fas fa-upload fa-3x"></i>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                magnam.
+            </p>
         </div>
     </div>
-
+</section>
 
 <!-- Footer -->
 <footer class="footer bg-dark py-5">
@@ -46,9 +113,6 @@
         </div>
     </div>
 </footer>
-
-</body>
-</html>
 
 </body>
 </html>
